--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "convex": "^1.17.4",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
+    "lucide-react": "^0.464.0",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "svix": "^1.44.0"
   },
