--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^6.9.6",
     "@monaco-editor/react": "^4.6.0",
     "convex": "^1.17.4",
+    "framer-motion": "^11.15.0",
     "lucide-react": "^0.464.0",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
